2009-04-13  Aaron Fairbanks <kafabrith@gmail.com>

	 * Form1.Designer.cs: Added GUI. It still needs work.

2009-04-06  Stephen Shaw  <sshaw@decriptor.com>

	 * Config.cs: Changed ApplicationData to LocalApplicationData.
	 Now it puts our stuff in {user}/AppData/Local/librarysim

2009-04-06  Stephen Shaw  <sshaw@decriptor.com>

	 * sqlite3.dll: Not needed to compile, however its needed
	 to run the program.

2009-04-04  Stephen Shaw  <sshaw@decriptor.com>

	 * dlls: Added this directory for any dlls need for both
	windows and linux

	 * dlls/Mono.Data.SQLite.dll: Added the Mono dll for SQLite.
	Its cross platform, so it will work just fine with windows
		 