@@ -6,7 +6,8 @@ namespace librarysim.Interfaces
 	public interface IDataAccess
 	{
 		#region Patrons
-		DataSet RetrievePatron(int patronID);
+		DataSet RetrievePatron(int? patronID, string name, string phoneNumber, string address, 
+		                  string gender, int? dob);
 		
         void AddPatron(string name, string phoneNumber, string address, 
 		                  string gender, int dob);
@@ -18,11 +19,12 @@ namespace librarysim.Interfaces
         #endregion
 		
 		#region Books
-		DataSet RetrieveBook(int? bookID);
+		DataSet RetrieveBook(int? bookID, int? patronID, string type, string title, string author, 
+		                            string description, DateTime checkedin, DateTime checkedout, int reserved);
 		
         void AddBook(string type, string title, string author, string description);
 
-        void UpdateBook(int bookID, int? patron, string type, string title, string author,
+        void UpdateBook(int bookID, int? patronID, string type, string title, string author,
 		                string description, DateTime checkedin, DateTime checkedout,
 		                bool reserved);
 		
@@ -30,11 +32,12 @@ namespace librarysim.Interfaces
         #endregion
 
 		#region Media
-		DataSet RetrieveMedia(int? media);
+		DataSet RetrieveMedia(int? mediaID, int? patronID, string type, string title, string author, 
+		                            string rating, string checkedin, string checkedout, int reserved);
 		
         void AddMedia(string type, string title, string rating, string description);
 
-        void UpdateMedia(int mediaID, int? patron, string type, string title, string rating,
+        void UpdateMedia(int mediaID, int? patronID, string type, string title, string rating,
 		                string description, DateTime checkedin, DateTime checkedout,
 		                bool reserved);
 		
